Release Notes

* 4/20/2016
  * changed JG to set maxWalltime=24h to scouts with cpuTime=0 or None

* 4/19/2016
  * fixed getScoutJobData to use jobs with nEvents<10 but wallTime>6h

* 4/18/2016
  * using 95th percentile for cpuTime
  * fixed dst:XYZ to use nucleus instead of PQ

* 4/14/2016
  * using smaller minTotalWalltime for WQ with site in AtlasPJT

* 4/13/2016
  * changed resume/pauseTask to  activate/throttle jobs
  * fixed JG for pending tasks to release lock
  * fixed dump in ThreadUtils
  * imporved AtlasAJB to work with includedSite=''
  * improved unlockTasks to release tasks locked by dead processes
  * fixed oldPandaIDs in JG for job cloning and multiple consumers

* 4/12/2016
  * added splitRule to mapper attributes

* 4/10/2016
  * fixed sortParallelJobsBySite for oldPandaIDs

* 4/7/2016
  * added eventService to WQ

* 4/5/2016
  * fixed AtlasAJB to works with strings for excluded/includedSites
  * changed AtlasPPP to pause tasks when duplication is found

* 4/4/2016
  * added fractionFreeSpace to AtlasPTB
  * changed AtlasPTB to take fullRW into account for space estimation

* 3/31/2016
  * fixed AtlasAJB for ath releases
  * disabled to send scouts to non-short queues if site is set
  * fixed AtlasAJB for remote access not to ignore resource matching

* 3/30/2016
  * fixed prepareTasksToBeFinished_JEDI for scouting+noWaitParent
  * using assessmentTime for early avalanche

* 3/24/2016
  * fixed scoutJobData for ES
  * fixed retryTask for active exhausted tasks

* 3/23/2016
  * fixed JG to record retry history for multiple consumers
  * fixed JG for ddd:

* 3/21/2016
  * changed JS to take job multiplicity into account
  * fixed JRB to set implicit parameters for job cloning

* 3/17/2016
  * removed quote from error message for upstream
  * changed fatal errors in JG to temporary
  * added skipUnavailableFiles to InputChunk

* 3/16/2016
  * added rerefine to setOnHold
  * added putLogToOS